# AnnaUndEve

./: .gitignore  README.md  pyproject.toml
data/: grimm_salat.mid  test_data.mid
notebooks/: compose_experiment.ipynb
src/utils/: midi.py
