[tool.poetry]
name = "AnnaUndEve"
version = "0.1.0"
description = ""
authors = ["Stefan Kuhn", "Eva Kuhn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
mido = "^1.3.2"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
ipykernel = "^6.28.0"
fluidsynth = "^0.2"
midi2audio = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
